--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+pypng==0.20220715.0
+qrcode==7.4.2
 SQLAlchemy==2.0.15
 typing_extensions==4.5.0
 Werkzeug==2.3.4
-qrcode==7.4.2
